{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 34,
  "lineage": "0dbfca41-1dd5-3480-08d2-c0448f8b2125",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bia-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3f602d23f1659d",
            "arn": "arn:aws:ec2:us-east-1:632872792512:instance/i-020df2aede3e1a562",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020df2aede3e1a562",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0125f662a67260e6e",
            "private_dns": "ip-172-31-20-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.71",
            "public_dns": "ec2-54-81-121-32.compute-1.amazonaws.com",
            "public_ip": "54.81.121.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02b90fd23421121a6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "bia-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004774481f6746859",
            "tags": {
              "Name": "bia-terraform",
              "ambiente": "dev"
            },
            "tags_all": {
              "Name": "bia-terraform",
              "ambiente": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0faf30500363750cc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bia-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bia-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632872792512:security-group/sg-0faf30500363750cc",
            "description": "Regra para a instacia EC2 bia-terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faf30500363750cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "bia-tf",
            "name_prefix": "",
            "owner_id": "632872792512",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bia-tf"
            },
            "tags_all": {
              "Name": "bia-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbde5a1a4dbb8487"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632872792512:security-group-rule/sgr-0c1f9d83eac77ee1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c1f9d83eac77ee1c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf30500363750cc",
            "security_group_rule_id": "sgr-0c1f9d83eac77ee1c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bia-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632872792512:security-group-rule/sgr-070a78f88e033dd23",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-070a78f88e033dd23",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf30500363750cc",
            "security_group_rule_id": "sgr-070a78f88e033dd23",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bia-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bia-tf-3001-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632872792512:security-group-rule/sgr-0c3f757c478c8b851",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-0c3f757c478c8b851",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf30500363750cc",
            "security_group_rule_id": "sgr-0c3f757c478c8b851",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bia-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bia-tf-3001-ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632872792512:security-group-rule/sgr-026530be16e904a90",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3001,
            "id": "sgr-026530be16e904a90",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0faf30500363750cc",
            "security_group_rule_id": "sgr-026530be16e904a90",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bia-tf"
          ]
        }
      ]
    }
  ]
}